--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -8,7 +8,8 @@
   booktitle    = {{IJCAI}},
   pages        = {2178--2185},
   publisher    = {{IJCAI/AAAI}},
-  year         = {2011}
+  year         = {2011},
+  doi          = {10.5591/978-1-57735-516-8/IJCAI11-363}
 }
 @inproceedings{DBLP:conf/nips/Broeck11,
   author       = {Guy {Van den Broeck}},
@@ -16,7 +17,9 @@
                   Probabilistic Inference},
   booktitle    = {{NIPS}},
   pages        = {1386--1394},
-  year         = {2011}
+  year         = {2011},
+  url          = {https://proceedings.neurips.cc/paper/2011/hash/846c260d715e5b854ffad5f70a516c88-Abstract.html}
+
 }
 @inproceedings{DBLP:conf/kr/DilkasB23,
   author       = {Paulius Dilkas and
@@ -25,7 +28,8 @@
                   Progress, and Conjectures},
   booktitle    = {{KR}},
   pages        = {198--207},
-  year         = {2023}
+  year         = {2023},
+  doi          = {10.24963/KR.2023/20}
 }
 @inproceedings{DBLP:conf/uai/BremenK21,
   author       = {Timothy {van Bremen} and
@@ -36,7 +40,8 @@
   volume       = {161},
   pages        = {1393--1402},
   publisher    = {{AUAI} Press},
-  year         = {2021}
+  year         = {2021},
+  url          = {https://proceedings.mlr.press/v161/bremen21a.html}
 }
 @article{DBLP:journals/jair/Kuzelka21,
   author       = {Ondrej Ku\v{z}elka},
@@ -45,36 +50,8 @@
   journal      = {J. Artif. Intell. Res.},
   volume       = {70},
   pages        = {1281--1307},
-  year         = {2021}
-}
-@inproceedings{DBLP:conf/ijcai/Kuzelka23,
-  author       = {Ondrej Ku\v{z}elka},
-  title        = {Counting and Sampling Models in First-Order Logic},
-  booktitle    = {{IJCAI}},
-  pages        = {7020--7025},
-  publisher    = {ijcai.org},
-  year         = {2023}
-}
-@inproceedings{DBLP:conf/aaai/WangB0K22,
-  author       = {Yuanhong Wang and
-                  Timothy {van Bremen} and
-                  Yuyi Wang and
-                  Ondrej Ku\v{z}elka},
-  title        = {Domain-Lifted Sampling for Universal Two-Variable Logic and Extensions},
-  booktitle    = {{AAAI}},
-  pages        = {10070--10079},
-  publisher    = {{AAAI} Press},
-  year         = {2022}
-}
-@inproceedings{DBLP:conf/lics/WangP0K23,
-  author       = {Yuanhong Wang and
-                  Juhua Pu and
-                  Yuyi Wang and
-                  Ondrej Ku\v{z}elka},
-  title        = {On Exact Sampling in the Two-Variable Fragment of First-Order Logic},
-  booktitle    = {{LICS}},
-  pages        = {1--13},
-  year         = {2023}
+  year         = {2021},
+  doi          = {10.1613/JAIR.1.12320}
 }
 @inproceedings{DBLP:conf/ijcai/BremenK20,
   author       = {Timothy {van Bremen} and
@@ -84,7 +61,8 @@
   booktitle    = {{IJCAI}},
   pages        = {4252--4258},
   publisher    = {ijcai.org},
-  year         = {2020}
+  year         = {2020},
+  doi          = {10.24963/IJCAI.2020/587}
 }
 @article{DBLP:journals/ai/BremenK23,
   author       = {Timothy {van Bremen} and
@@ -93,7 +71,8 @@
   journal      = {Artif. Intell.},
   volume       = {324},
   pages        = {103997},
-  year         = {2023}
+  year         = {2023},
+  doi          = {10.1016/J.ARTINT.2023.103997}
 }
 @inproceedings{DBLP:conf/aaai/TothK23,
   author       = {Jan T{\'{o}}th and
@@ -102,7 +81,8 @@
   booktitle    = {{AAAI}},
   pages        = {12295--12304},
   publisher    = {{AAAI} Press},
-  year         = {2023}
+  year         = {2023},
+  doi          = {10.1609/AAAI.V37I10.26449}
 }
 @inproceedings{DBLP:conf/ijcai/SvatosJT0K23,
   author       = {Martin Svatos and
@@ -114,21 +94,8 @@
   booktitle    = {{IJCAI}},
   pages        = {3338--3346},
   publisher    = {ijcai.org},
-  year         = {2023}
-}
-@inproceedings{DBLP:conf/ilp/BarvinekB0ZK21,
-  author       = {J{\'{a}}chym Barv{\'{\i}}nek and
-                  Timothy {van Bremen} and
-                  Yuyi Wang and
-                  Filip Zelezn{\'{y}} and
-                  Ondrej Ku\v{z}elka},
-  title        = {Automatic Conjecturing of {P}-Recursions Using Lifted Inference},
-  booktitle    = {{ILP}},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {13191},
-  pages        = {17--25},
-  publisher    = {Springer},
-  year         = {2021}
+  year         = {2023},
+  doi          = {10.24963/IJCAI.2023/372}
 }
 @inproceedings{DBLP:conf/aaai/MalhotraS22,
   author       = {Sagar Malhotra and
@@ -138,7 +105,8 @@
   booktitle    = {{AAAI}},
   pages        = {5817--5824},
   publisher    = {{AAAI} Press},
-  year         = {2022}
+  year         = {2022},
+  doi          = {10.1609/AAAI.V36I5.20525}
 }
 @article{DBLP:journals/cacm/GogateD16,
   author       = {Vibhav Gogate and
@@ -148,18 +116,8 @@
   volume       = {59},
   number       = {7},
   pages        = {107--115},
-  year         = {2016}
-}
-@inproceedings{DBLP:conf/aaai/VenugopalSG15,
-  author       = {Deepak Venugopal and
-                  Somdeb Sarkhel and
-                  Vibhav Gogate},
-  title        = {Just Count the Satisfied Groundings: Scalable Local-Search and Sampling
-                  Based Inference in MLNs},
-  booktitle    = {{AAAI}},
-  pages        = {3606--3612},
-  publisher    = {{AAAI} Press},
-  year         = {2015}
+  year         = {2016},
+  doi          = {10.1145/2936726}
 }
 @article{DBLP:journals/pvldb/NiuRDS11,
   author       = {Feng Niu and
@@ -172,17 +130,8 @@
   volume       = {4},
   number       = {6},
   pages        = {373--384},
-  year         = {2011}
-}
-@article{DBLP:journals/ml/RichardsonD06,
-  author       = {Matthew Richardson and
-                  Pedro M. Domingos},
-  title        = {Markov logic networks},
-  journal      = {Mach. Learn.},
-  volume       = {62},
-  number       = {1-2},
-  pages        = {107--136},
-  year         = {2006}
+  year         = {2011},
+  doi          = {10.14778/1978665.1978669}
 }
 @inproceedings{DBLP:conf/kr/KazemiP16,
   author       = {Seyed Mehran Kazemi and
@@ -192,7 +141,8 @@
   booktitle    = {{KR}},
   pages        = {561--564},
   publisher    = {{AAAI} Press},
-  year         = {2016}
+  year         = {2016},
+  url          = {http://www.aaai.org/ocs/index.php/KR/KR16/paper/view/12861}
 }
 @article{DBLP:journals/jair/TotisDRK23,
   author       = {Pietro Totis and
@@ -203,30 +153,8 @@
   journal      = {J. Artif. Intell. Res.},
   volume       = {76},
   pages        = {1--58},
-  year         = {2023}
-}
-@article{DBLP:journals/ijar/AzzoliniR23,
-  author       = {Damiano Azzolini and
-                  Fabrizio Riguzzi},
-  title        = {Lifted inference for statistical statements in probabilistic answer
-                  set programming},
-  journal      = {Int. J. Approx. Reason.},
-  volume       = {163},
-  pages        = {109040},
-  year         = {2023}
-}
-@article{DBLP:journals/ijar/RiguzziBZCL17,
-  author       = {Fabrizio Riguzzi and
-                  Elena Bellodi and
-                  Riccardo Zese and
-                  Giuseppe Cota and
-                  Evelina Lamma},
-  title        = {A survey of lifted inference approaches for probabilistic logic programming
-                  under the distribution semantics},
-  journal      = {Int. J. Approx. Reason.},
-  volume       = {80},
-  pages        = {313--333},
-  year         = {2017}
+  year         = {2023},
+  doi          = {10.1613/JAIR.1.14062}
 }
 @inproceedings{DBLP:conf/ecai/Kersting12,
   author       = {Kristian Kersting},
@@ -236,24 +164,16 @@
   volume       = {242},
   pages        = {33--38},
   publisher    = {{IOS} Press},
-  year         = {2012}
+  year         = {2012},
+  doi          = {10.3233/978-1-61499-098-7-33}
 }
 @inproceedings{DBLP:conf/starai/JaegerB12,
   author       = {Manfred Jaeger and
                   Guy {Van den Broeck}},
   title        = {Liftability of Probabilistic Inference: Upper and Lower Bounds},
   booktitle    = {StarAI@UAI},
-  year         = {2012}
-}
-@inproceedings{DBLP:conf/nips/KazemiKBP16,
-  author       = {Seyed Mehran Kazemi and
-                  Angelika Kimmig and
-                  Guy {Van den Broeck} and
-                  David Poole},
-  title        = {New Liftable Classes for First-Order Probabilistic Inference},
-  booktitle    = {{NIPS}},
-  pages        = {3117--3125},
-  year         = {2016}
+  year         = {2012},
+  url          = {https://starai.cs.kuleuven.be/2012/accepted/jaeger.pdf}
 }
 @article{DBLP:journals/debu/GribkoffSB14,
   author       = {Eric Gribkoff and
@@ -264,7 +184,8 @@
   volume       = {37},
   number       = {3},
   pages        = {6--17},
-  year         = {2014}
+  year         = {2014},
+  url          = {http://sites.computer.org/debull/A14sept/p6.pdf}
 }
 @inproceedings{DBLP:conf/pods/BeameBGS15,
   author       = {Paul Beame and
@@ -275,7 +196,8 @@
   booktitle    = {{PODS}},
   pages        = {313--328},
   publisher    = {{ACM}},
-  year         = {2015}
+  year         = {2015},
+  doi          = {10.1145/2745754.2745760}
 }
 @inproceedings{DBLP:conf/kr/BroeckMD14,
   author    = {Guy {Van den Broeck} and
@@ -284,19 +206,14 @@
   title     = {Skolemization for Weighted First-Order Model Counting},
   booktitle = {{KR}},
   publisher = {{AAAI} Press},
-  year      = {2014}
+  year      = {2014},
+  url          = {http://www.aaai.org/ocs/index.php/KR/KR14/paper/view/8012}
 }
 @book{hinman2018fundamentals,
   title={Fundamentals of mathematical logic},
   author={Hinman, Peter G.},
   year={2018},
   publisher={CRC Press}
-}
-@book{DBLP:books/sp/Lloyd87,
-  author       = {John W. Lloyd},
-  title        = {Foundations of Logic Programming, 2nd Edition},
-  publisher    = {Springer},
-  year         = {1987}
 }
 @article{darwiche2001tractable,
   title={On the tractable counting of theory models and its application to truth maintenance and belief revision},
@@ -306,7 +223,8 @@
   number={1-2},
   pages={11--34},
   year={2001},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi          = {10.3166/JANCL.11.11-34}
 }
 @book{DBLP:books/daglib/0030198,
   author       = {Wilfrid Hodges},
@@ -328,7 +246,8 @@
   booktitle    = {{AAAI}},
   pages        = {1094--1099},
   publisher    = {{AAAI} Press},
-  year         = {2008}
+  year         = {2008},
+  url          = {http://www.aaai.org/Library/AAAI/2008/aaai08-173.php}
 }
 @inproceedings{DBLP:conf/uai/BroeckCD12,
   author       = {Guy {Van den Broeck} and
@@ -339,7 +258,8 @@
   booktitle    = {{UAI}},
   pages        = {131--141},
   publisher    = {{AUAI} Press},
-  year         = {2012}
+  year         = {2012},
+  url          = {https://dslpitt.org/uai/displayArticleDetails.jsp?mmnu=1\&smnu=2\&article\_id=2349\&proceeding\_id=28}
 }
 @misc{tóth2024complexityweightedfirstordermodel,
       title={Complexity of Weighted First-Order Model Counting in the Two-Variable Fragment with Counting Quantifiers: A Bound to Beat},
@@ -358,7 +278,8 @@
   volume       = {172},
   number       = {6-7},
   pages        = {772--799},
-  year         = {2008}
+  year         = {2008},
+  doi          = {10.1016/J.ARTINT.2007.11.002}
 }
 @article{DBLP:journals/ai/Nilsson86,
   author       = {Nils J. Nilsson},
@@ -367,7 +288,8 @@
   volume       = {28},
   number       = {1},
   pages        = {71--87},
-  year         = {1986}
+  year         = {1986},
+  doi          = {10.1016/0004-3702(86)90031-7}
 }
 @article{vsaletic2024graded,
   title={Graded Logics},
@@ -396,4 +318,27 @@
   volume       = {331},
   pages        = {104114},
   year         = {2024}
+}
+@article{DBLP:journals/ijar/AzzoliniR23,
+  author       = {Damiano Azzolini and
+                  Fabrizio Riguzzi},
+  title        = {Lifted inference for statistical statements in probabilistic answer
+                  set programming},
+  journal      = {Int. J. Approx. Reason.},
+  volume       = {163},
+  pages        = {109040},
+  year         = {2023}
+}
+@article{DBLP:journals/ijar/RiguzziBZCL17,
+  author       = {Fabrizio Riguzzi and
+                  Elena Bellodi and
+                  Riccardo Zese and
+                  Giuseppe Cota and
+                  Evelina Lamma},
+  title        = {A survey of lifted inference approaches for probabilistic logic programming
+                  under the distribution semantics},
+  journal      = {Int. J. Approx. Reason.},
+  volume       = {80},
+  pages        = {313--333},
+  year         = {2017}
 }
