--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -342,3 +342,17 @@
   pages        = {313--333},
   year         = {2017}
 }
+@inproceedings{DBLP:conf/ilp/BarvinekB0ZK21,
+  author       = {J{\'{a}}chym Barv{\'{\i}}nek and
+                  Timothy {van Bremen} and
+                  Yuyi Wang and
+                  Filip Zelezn{\'{y}} and
+                  Ondrej Ku\v{z}elka},
+  title        = {Automatic Conjecturing of P-Recursions Using Lifted Inference},
+  booktitle    = {{ILP}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13191},
+  pages        = {17--25},
+  publisher    = {Springer},
+  year         = {2021}
+}
