--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -67,6 +67,7 @@
 \usepackage{siunitx}
 \usepackage{tikz}
 \usepackage{microtype}
+\usepackage[backgroundcolor=lightgray]{todonotes}
 
 \usetikzlibrary{arrows.meta}
 \usetikzlibrary{fit}
@@ -112,11 +113,6 @@
 \crefname{formula}{Formula}{Formulas}
 \creflabelformat{formula}{#2\textup{(#1)}#3}
 
-% TODO (for the entire paper):
-% * finish add DOIs or URLs to (non-book) references (and reformatting indentation) (and check reference formatting)
-% * sentence vs formula: be consistent and not confusing
-% * 15 pages excluding references
-
 \begin{document}
 
 \maketitle
@@ -139,16 +135,30 @@
   the current state of the art, as demonstrated through experimental results.
 \end{abstract}
 
+\todo[inline,caption={}]{
+  For the entire paper:
+  \begin{itemize}
+    \item Finish adding DOIs or URLs to (non-book) references (and reformatting
+          indentation) (and check reference formatting)
+    \item Sentence vs formula: be consistent and not confusing
+    \item 15 pages excluding references
+    \item Go through the rest of formatting instructions (in GTD)
+  \end{itemize}
+}
 \section{Introduction}
-% TODO: We would like to clarify that the main contribution of this work
-% consists of everything needed to complement recursive function definitions
-% with the necessary base cases. This process includes identifying the base
-% cases and their corresponding formulas, transforming them (including applying
-% a new smoothing procedure), and recursively reusing Crane. C++ code
-% generation, although relatively straightforward, is crucial for the usability
-% of the algorithm
 
-% TODO: focus more on current work
+\todo[inline,caption={}]{
+  \begin{itemize}
+    \item We would like to clarify that the main contribution of this work
+          consists of everything needed to complement recursive function
+          definitions with the necessary base cases. This process includes
+          identifying the base cases and their corresponding formulas,
+          transforming them (including applying a new smoothing procedure), and
+          recursively reusing Crane. C++ code generation, although relatively
+          straightforward, is crucial for the usability of the algorithm.
+    \item Focus more on current work
+  \end{itemize}
+}
 
 % 1. What is the problem?
 % 2. Why is it interesting and important?
@@ -194,17 +204,21 @@ liftability.
 % 4. Why hasn't it been solved before? (Or, what's wrong with previous proposed
 % solutions? How does mine differ?)
 
-% TODO: don't assume that the reader knows FOMC and FOMC algorithms
+\todo[inline,caption={}]{
+  \begin{itemize}
+    \item Don't assume that the reader knows FOMC and FOMC algorithms
+    \item It would be nice to give the necessary introduction to FOKC, or
+          \textsc{Crane} (an intuitive explanation early in the paper)
+    \item The principal motivation of a knowledge compilation-based approach to
+          FOMC comes from its ability to find polynomial-time solutions, where
+          the polynomial has a lower degree compared to, e.g.,
+          \textsc{FastWFOMC}~\cite{DBLP:conf/kr/DilkasB23}. The ability of the
+          algorithm to mathematically describe recursive solutions is also
+          noteworthy as the only other available alternative is to guess
+          them~\cite{DBLP:conf/ilp/BarvinekB0ZK21}.
+  \end{itemize}
+}
 
-% TODO: It would be nice to give the necessary introduction to FOKC, or CRANE
-% (an intuitive explanation early in the paper)
-
-% TODO: The principal motivation of a knowledge compilation-based approach to
-% FOMC comes from its ability to find polynomial-time solutions, where the
-% polynomial has a lower degree compared to, e.g., FastWFOMC (Dilkas and Belle,
-% 2023). The ability of the algorithm to mathematically describe recursive
-% solutions is also noteworthy as the only other available alternative is to
-% guess them (Barvı́nek, van Bremen, Wang, Zelezný, Kuzelka, ILP 2021).
 FOMC algorithms are diverse, with approaches ranging from \emph{first-order
   knowledge compilation} (FOKC) to local
 search~\cite{DBLP:journals/pvldb/NiuRDS11}, Monte Carlo
@@ -315,11 +329,12 @@ symbols~\cite{DBLP:books/daglib/0030198}.)
   the WFOMC of \cref{eq:skolemization} is equal to the FOMC of
   \cref{eq:skolemizationinitial}.
 \end{example}
-% TODO: make sure to revisit this in the future
+
+\todo[inline]{Make sure to revisit this in the future}
 
 \subsection{FOMC Algorithms and Their Logics}\label{sec:threelogics}
 
-% TODO: shorten the part about the three logics
+\todo[inline]{Shorten the part about the three logics}
 
 \begin{table*}[t]
   \centering
@@ -425,11 +440,12 @@ constrains all models to have \emph{precisely three positive literals with the
 
 While this work focuses on FOMC, we still define the weighted variant of the
 problem as Skolemization relies on weights even for unweighted FOMC.
-% TODO: Even though we are evaluating the algorithms on FOMC benchmarks, for
-% sentences with existential quantifiers, computing FOMC using Gantry requires
-% the use of WFOMC. For such sentences, Skolemization introduces predicates with
-% non-unary weights that must be accounted for to compute the correct model
-% count.
+
+\todo[inline]{Even though we are evaluating the algorithms on FOMC benchmarks,
+  for sentences with existential quantifiers, computing FOMC using \Cranetwo{}
+  requires the use of WFOMC. For such sentences, Skolemization introduces
+  predicates with non-unary weights that must be accounted for to compute the
+  correct model count.}
 
 \begin{definition}[WFOMC instance]\label{def:instance}
   A \emph{WFOMC instance} comprises: a formula $\phi$ in \FO{}, two (rational)
@@ -508,15 +524,17 @@ is $f(\mathbf{x}) = \expr{}$, where $f(\mathbf{x})$ is a signature.
 
 \section{Technical Contributions}\label{sec:main}
 
-% TODO: The algorithm’s recursive nature and its interaction with CRANE could be
-% explained more clearly
-
-% TODO: more emphasis on the motivation for each part of GANTRY (e.g., how
-% FindBaseCases addresses key issues in CRANE) would add depth to the
-% contribution.
-
-% TODO: this section should be expanded by 1 page ("a clear discussion of the
-% innovation aspect and technical parts")
+\todo[inline,caption={}]{
+  \begin{itemize}
+    \item The algorithm’s recursive nature and its interaction with
+          \textsc{Crane} could be explained more clearly
+    \item More emphasis on the motivation for each part of \Cranetwo{} (e.g.,
+          how \FindBaseCases addresses key issues in \textsc{Crane}) would add
+          depth to the contribution
+    \item this section should be expanded by 1 page (``a clear discussion of the
+          innovation aspect and technical parts'')
+  \end{itemize}
+}
 
 \begin{figure*}[t]
   \centering
@@ -569,10 +587,10 @@ compiling equations into C++ code, greatly expanding upon the range of formulas
 that could previously be handled by similar
 approaches~\cite{DBLP:conf/kr/KazemiP16}.
 
-% TODO (somewhere): Recall that each equation is either the definition (did I
-% define what a definition is?) of a function or the definition of a base case
-% of a function. (I could put this in the preliminaries as definitions and then
-% reference them below)
+\todo[inline]{Somewhere: Recall that each equation is either the definition (did
+  I define what a definition is?) of a function or the definition of a base case
+  of a function. (I could put this in the preliminaries as definitions and then
+  reference them below)}
 
 \subsection{Completing the Definitions of Functions}\label{sec:completing}
 
@@ -621,8 +639,9 @@ formulas and adds the resulting base case equations to $\mathcal{E}$.
   \textsc{Crane} on various derived formulas.
 \end{remark*}
 
-% TODO: move this example right after the definition of WFOMC (or near the
-% definition of a model)
+\todo[inline]{Move this example right after the definition of WFOMC (or near the
+  definition of a model)}
+
 \begin{example}[Counting bijections]\label{example:overall}
   Consider the following formula (previously examined by Dilkas and
   Belle~\cite{DBLP:conf/kr/DilkasB23}) that defines predicate $P$ as a bijection
@@ -675,7 +694,8 @@ $g(l, m) = \sum_{k=0}^{m}[0 \le k \le 1]\binom{m}{k}g(l-1, m-k)$ into
 $g(l, m) = g(l-1, m) + mg(l-1, m-1)$.
 
 \subsection{Identifying a Sufficient Set of Base Cases}\label{sec:identifying}
-% TODO: prove correctness?
+
+\todo[inline]{Prove correctness?}
 
 \begin{algorithm}[t]
   \caption{\protect\FindBaseCases{$\mathcal{E}$}}\label{alg:findbasecases}
@@ -1019,20 +1039,22 @@ return it.
 % Baselines: List and describe the baseline methods or systems used for
 % comparison.
 
-% TODO Experiments could be expanded by 1 page ("a more thorough and independent
-% practical assessment")
-
-% TODO: this section "would benefit from cleaner reasoning"
-
-% TODO: The difference between Gantry-Greedy and Gantry-BFS is in how the
-% algorithm chooses which compilation rule to apply to a formula. The former
-% uses greedy search: there is a list of rules, and the first applicable rule is
-% the one that gets used, disregarding all the others. The latter uses a
-% combination of greedy and breadth-first search (BFS). That is, each
-% compilation rule is identified as either greedy or non-greedy. Greedy rules
-% are applied as soon as possible at any stage of the compilation process. BFS
-% is executed over all applicable non-greedy rules, identifying the solution
-% that can be constructed using the smallest number of such rules.
+\todo[inline,caption={}]{
+  \begin{itemize}
+    \item Experiments could be expanded by 1 page (``a more thorough and
+          independent practical assessment'')
+    \item The difference between \Cranegreedy{} and \Cranebfs{} is in how the
+          algorithm chooses which compilation rule to apply to a formula. The
+          former uses greedy search: there is a list of rules, and the first
+          applicable rule is the one that gets used, disregarding all the
+          others. The latter uses a combination of greedy and breadth-first
+          search (BFS). That is, each compilation rule is identified as either
+          greedy or non-greedy. Greedy rules are applied as soon as possible at
+          any stage of the compilation process. BFS is executed over all
+          applicable non-greedy rules, identifying the solution that can be
+          constructed using the smallest number of such rules.
+  \end{itemize}
+}
 
 Our empirical evaluation sought to compare the runtime performance of
 {\Cranetwo} with the current state of the art, namely \textsc{FastWFOMC} and
@@ -1061,9 +1083,14 @@ while the other algorithms were executed on the Java Virtual Machine 1.8.0\_201.
 % including size, source, and any preprocessing steps.
 
 \subsection{Benchmarks}
-% TODO: more benchmarks from NOT my work
-% TODO: make sure it's clear what the 'raw' instances are
-% TODO: don't emphasise that the benchmarks come from my previous work
+
+\todo[inline,caption={}]{
+  \begin{itemize}
+    \item More benchmarks from NOT my work
+    \item Make sure it's clear what the `raw' instances are
+    \item Don't emphasise that the benchmarks come from my previous work
+  \end{itemize}
+}
 
 We compare these algorithms using three benchmarks from previous studies. The
 first benchmark is the function-counting problem from \cref{example:functions},
@@ -1096,7 +1123,8 @@ where $w^{-}(R) = w^{-}(S) = -1$.
   \caption{The runtime of the algorithms as a function of the domain size. Note
     that both axes are on a logarithmic scale.}\label{fig:plot}
 \end{figure*}
-% TODO: shrink/restructure to fit into the margins
+
+\todo[inline]{Shrink/restructure to fit into the margins}
 
 %Since \textsc{FastWFOMC} does not support many-sorted logic, our experiments are
 %limited to formulas with a single domain. However, many of the counting problems
@@ -1145,17 +1173,20 @@ on total runtime, dominated by the latter.
 
 \subsection{Results}
 
-% TODO: On the ’friends’ and ’functions’ benchmarks, ForcLift runs until the
-% model count exceeds 231 − 1.
-
-% TODO: We are not aware of any formulas on which Gantry scales worse compared
-% to either ForcLift or FastWFOMC. The one advantage that FastWFOMC has over
-% Gantry is its support for counting quantifiers.
-
-% TODO: Regarding programming languages and accuracy, we verified that the
-% answers match for smaller domain sizes. Also, although written in different
-% languages, both Gantry and FastWFOMC use the GNU Multiple Precision Arithmetic
-% Library.
+\todo[inline,caption={}]{
+  \begin{itemize}
+    \item On the `friends' and `functions' benchmarks, \textsc{ForcLift} runs
+          until the model count exceeds $2^{31}-1$.
+    \item We are not aware of any formulas on which \Cranetwo{} scales worse
+          compared to either \textsc{ForcLift} or \textsc{FastWFOMC}. The one
+          advantage that \textsc{FastWFOMC} has over \Cranetwo{} is its support
+          for counting quantifiers.
+    \item Regarding programming languages and accuracy, we verified that the
+          answers match for smaller domain sizes. Also, although written in
+          different languages, both \Cranetwo{} and \textsc{FastWFOMC} use the
+          GNU Multiple Precision Arithmetic Library.
+  \end{itemize}
+}
 
 \Cref{fig:plot} presents a summary of the experimental results. Only
 \textsc{FastWFOMC} and \Cranebfs{} could handle the bijection-counting problem.
